<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"


        android:layout_height="148dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/user_img"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="20.sp"
        app:layout_constraintStart_toStartOf="parent"

android:text="@string/f_name"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
  />
    <TextView
        android:id="@+id/nameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"

        android:padding="10dp"
        android:textSize="20.sp"
        app:layout_constraintStart_toEndOf="@id/nameLable"
        app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="5dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="name " />

     <TextView
        android:id="@+id/companyLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:padding="7dp"

        android:textSize="20.sp"
        app:layout_constraintStart_toStartOf="parent"

android:text="@string/company_name"
        app:layout_constraintTop_toBottomOf="@+id/nameLable"
  />
    <TextView
        android:id="@+id/companyTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"

        android:padding="10dp"
        android:textSize="20.sp"
        app:layout_constraintStart_toEndOf="@id/companyLable"
        app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="5dp"
 app:layout_constraintTop_toBottomOf="@id/nameTv"
        tools:text="name " />



</androidx.constraintlayout.widget.ConstraintLayout>